# MinmatarFT

./: .gitignore  Cargo.toml  README.md  clippy.toml
domain/: Cargo.toml
domain/src/: faction.rs  fit.rs  lib.rs  module.rs  ship.rs  ship_stats.rs
domain/src/ship_type/: battleship.rs  cruiser.rs  destroyer.rs  frigate.rs  stat_modification.rs
fitting_engine/: Cargo.toml
fitting_engine/src/: faction.rs  fit.rs  fit_stats.rs  lib.rs  module.rs  module_instance.rs  ship.rs  ship_stats.rs  static_module.rs  tests.rs
fitting_engine/src/ship_type/: battlecruiser.rs  battleship.rs  cruiser.rs  destroyer.rs  frigate.rs  mod.rs  stat_modification.rs
fitting_engine/src/stats/: capacitor.rs  defense.rs  drone.rs  fitting.rs  mod.rs  movement.rs  sensor.rs  tests.rs
fitting_engine_macros/: Cargo.toml
fitting_engine_macros/src/: lib.rs
fitting_engine_ts_gen/: Cargo.toml
fitting_engine_ts_gen/src/: lib.rs
macros/: Cargo.toml
macros/src/: faction_ids.rs  lib.rs  ship_type_ids.rs
macros/src/domain_impl/: faction.rs  mod.rs  ship.rs  ship_stats.rs  slice.rs
macros/src/domain_impl/ship_type/: mod.rs
macros/src/model/: group_id.rs  mod.rs  type_dogma.rs  type_id.rs
sde_parser/: Cargo.toml
sde_parser/src/: extract_resistance.rs  faction_ids.rs  lib.rs
sde_parser/src/model/: category_id.rs  dogma_attribute.rs  mod.rs  type_id.rs
sde_provider/: Cargo.toml
sde_provider/src/: lib.rs
src/: main.rs
static_data/: Cargo.toml
static_data/src/: lib.rs
static_data_macros/: Cargo.toml
static_data_macros/src/: lib.rs
static_data_macros/src/domain_impl/: mod.rs  ship.rs  ship_stats.rs  slice.rs
static_data_macros/src/domain_impl/ship_type/: mod.rs
static_data_macros/src/domain_impl/stats/: capacitor.rs  defense.rs  drone.rs  fitting.rs  mod.rs  movement.rs  sensor.rs
web/: Cargo.toml  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/gen_overwrite/types/: ShipType.ts
web/src/: lib.rs
web/src/types/: CompressedFit.ts  ships.ts
web/src/wasm_import/: FitInteractor.ts  Interactor.ts  cache.ts  instance.ts
web/wasm_export/: Cargo.toml
web/wasm_export/src/: lib.rs  manual_memory.rs
