[package]
name = "minmatar_ft"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <rkaasgaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitting_engine = {path= "fitting_engine" }
static_data = {path="static_data"}

[workspace]
members = ["fitting_engine", "macros", "static_data", "sde_parser", "sde_provider"]
