[package]
name = "minmatar_ft"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <rkaasgaard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitting_engine = {path= "fitting_engine" }
sde_parser = {path="sde_parser"}

[workspace]
members = ["fitting_engine", "static_data_macros", "static_data", "sde_parser", "sde_provider", "fitting_engine_macros", "web"]
