[package]
name = "fitting_engine"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
fitting_engine_macros = { path = "../fitting_engine_macros" }
once_cell = "1.5.2"
