[package]
name = "fitting_engine"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[features]
default = []
ts = ["ts-rs"]

[dependencies]
funty = "1.2"
serde = { version = "1.0", features = ["derive"] }
fitting_engine_macros = { path = "../fitting_engine_macros" }
once_cell = "1.5.2"
approx = "0.4.0"
ts-rs = {git = "https://github.com/cramt/ts-rs.git", branch = "main", optional = true}
