[package]
name = "fitting_engine_ts_gen"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-rs = {git = "https://github.com/cramt/ts-rs.git", branch = "main"}
fitting_engine = {path = "../fitting_engine", features=["ts"]}
