[package]
name = "macros"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
reqwest  = "0.11"
tokio = {version = "1.2", features = ["rt-multi-thread"]}
syn = "1.0.6"
quote = "1.0"
proc-macro-hack = "0.5.19"
zip = "0.5.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
proc-macro2 = "1.0.24"

domain = { path = "../domain" }
