[package]
name = "macros"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
tokio = {version = "1.2", features = ["rt-multi-thread"]}
syn = "1.0.6"
quote = "1.0"
proc-macro-hack = "0.5.19"
proc-macro2 = "1.0.24"

fitting_engine = { path = "../fitting_engine" }
sde_parser = {path = "../sde_parser"}
sde_provider = {path = "../sde_provider"}
