[package]
name = "sde_parser"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.64"
fitting_engine = { path = "../fitting_engine" }

