[package]
name = "sde_provider"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.10"
reqwest  = "0.11"
tokio = {version = "1.2", features = ["rt-multi-thread"]}
async-trait = "0.1.42"

sde_parser = { path = "../sde_parser" }
