[package]
name = "static_data"
version = "0.1.0"
authors = ["Lucca Kaasgaard Christiansen <1078059@ucn.dk>", "Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_data_macros = { path = "../static_data_macros" }
fitting_engine = { path = "../fitting_engine" }
