[package]
name = "web"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
web-sys = "0.3.47"
js-sys = "0.3.47"
