[package]
name = "wasm_export"
version = "0.1.0"
authors = ["Alexandra Østermark <alex.cramt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.71"
fitting_engine = { path = "../../fitting_engine" }
static_data = { path = "../../static_data" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.7.2"
js-sys = "0.3.48"
